 + Construction Mode: Remember all selections
 + Construction Mode: Add subtle glow to healing station
 + Construction Mode: Allow to change "Switch Hedgehog" in weapon scheme
 + Construction Mode: Hide selected sub-modes from crate/object placer from enemies over the net
 + Continental supplies: Custom weapon icons for the special weapons
 + Racer, Tech Racer: Beforee starting a round, make first waypoint flash and center camera to it
 + Racer: Use dark waypoints in bright themes like Bath
 + Racer, Tech Racer: Various other waypoint appearance improvements
 + Battalion: Minor message and visual improvements
 + Battalion: Mutate hog hats by default, but not the names
 + Battalion: Script parameter “mutatenames=true” to also change the hog names (default: false)
 + Battalion (King Mode): Kings always wear crowns and non-kings don't, regardless of settings
 + Battalion (King Mode): If the king dies, the hogs die normally instead of disappearing
 + Space Invasion: Add a default Space Invasion game scheme
 + Capture the Flag: Can now be played with more than 2 clans
 + Capture the Flag: Show team scores and score graph in stats screen
 + HedgeEditor: Show cursor coordinates in top left corner
 + Control: Always remove TimeBox and Resurrector
 * Battalion: Some texts in the mission panel were wrong and misleading
 * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)
 * Construction Mode, Racer, HedgeEditor: No longer play Incoming voice for building stuff, fix other sound problems
 * Capture the Flag: Fix many bugs caused by playing with >2 teams
 * Capture the Flag: Properly place flag when first hog uses kamikaze or TimeBox
 * Capture the Flag: Fix flag not being dropped when carrier uses piano strike
 * CTF_Blizzard: Don't allow more than 2 clans. Excess hogs will be removed

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start